# simrail-skrj

./: .gitignore  Dockerfile  Makefile  pyproject.toml
src/skrj/: __main__.py  builder.py  const.py  train.json  train_definitions.py
src/skrj/data/: speed.json
src/skrj/data/trains/: 1441.json  24197.json
src/skrj/enrichments/: __init__.py  base.py  crew_changes.py  line_junctions.py  radio_channels.py  speed.py  speed_old.py
src/skrj/templates/: EIE_14100.fodt  generic.html
