[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry]
name = "simrail-rjp"
version = "0.1.0"
description = ""
authors = ["Piotr Kilczuk <piotr@kilczuk.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
